<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginb1"
    tools:context=".SignUp_activity"
    android:id="@+id/signupActivity">


    <EditText
        android:id="@+id/admininputuserweight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Weight(Kg)"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/holo_dark_blue"
        app:layout_constraintEnd_toEndOf="@+id/admininputuserpassword2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/admininputconfirmuserpassword"
        app:layout_constraintTop_toBottomOf="@+id/admininputuserheight" />

    <TextView
        android:id="@+id/textViewadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/admininputusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/holo_dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewadmin"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/admininputuseremail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/holo_dark_blue"
        app:layout_constraintEnd_toEndOf="@+id/admininputusername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/admininputusername"
        app:layout_constraintTop_toBottomOf="@+id/admininputusername"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/admininputuserpassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/holo_dark_blue"
        app:layout_constraintEnd_toEndOf="@+id/admininputuseremail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/admininputuseremail"
        app:layout_constraintTop_toBottomOf="@+id/admininputuseremail" />

    <EditText
        android:id="@+id/admininputconfirmuserpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/holo_dark_blue"
        app:layout_constraintEnd_toEndOf="@+id/admininputuserpassword2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/admininputuserpassword2"
        app:layout_constraintTop_toBottomOf="@+id/admininputuserpassword2" />

    <EditText
        android:id="@+id/admininputgender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Gender"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/holo_dark_blue"
        app:layout_constraintEnd_toEndOf="@+id/admininputuserweight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/admininputuserweight"
        app:layout_constraintTop_toBottomOf="@+id/admininputuserweight" />


    <Button
        android:id="@+id/buttonnewregisteradmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="564dp"
        android:background="@drawable/btn_bg"
        android:text="Register"
        android:textColor="@color/design_default_color_on_primary"
        android:textColorHighlight="@color/holo_dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alreadyhaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Already have an account?"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonnewregisteradmin"
        app:layout_constraintStart_toStartOf="@+id/buttonnewregisteradmin"
        app:layout_constraintTop_toBottomOf="@+id/buttonnewregisteradmin" />

    <EditText
        android:id="@+id/admininputuserheight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/inputbg"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Height(Ft)"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/holo_dark_blue"
        app:layout_constraintEnd_toEndOf="@+id/admininputuserpassword2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/admininputconfirmuserpassword"
        app:layout_constraintTop_toBottomOf="@+id/admininputconfirmuserpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>