...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginb1"
    tools:context=".loginActivity"
    android:id="@+id/activityLogin">

    <TextView
        android:id="@+id/textViewadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
...
            android:text="Don't have an account?"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textviewsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textAlignment="viewStart"
            android:textColor="@color/holo_dark_blue"
            android:textColorHighlight="@color/white"
...
